[package]
name = "cgrip"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive"] }
encoding_rs = "0.8.35"
hashbrown = "0.16.0"
image = {version = "0.25.9", default-features = false, features = ["bmp", "png"]}
tap = "1.0.1"
